[package]
name = "grep-rs"
version = "0.1.1"
edition = "2021"
description = "A basic, learning-oriented implementation of grep: the famous CLI string and pattern-matching tool."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"

[dev-dependencies]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true  # Enable link-time optimization.
